--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -4,12 +4,6 @@ This footer template is shared across all the pages.
 
 <footer class="m-footer">
   <div class="m-footer__content">
-    <p class="m-footer-copyright">
-      <span>{{@site.title}} &copy; {{date format="YYYY"}}</span>
-      <span>&nbsp; &bull; &nbsp;</span>
-      <span>{{t "Published with"}} <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a></span>
-    </p>
-
     <nav class="m-footer-social">
       {{#if @site.facebook}}
         <a href="{{facebook_url @site.facebook}}" target="_blank" rel="noopener" aria-label="Facebook">
@@ -21,9 +15,17 @@ This footer template is shared across all the pages.
           <span class="icon-twitter"></span>
         </a>
       {{/if}}
+
+      {{!-- Custom instagram icon --}}
+      <a href="https://www.instagram.com/shotgunhour/" target="_blank" rel="noopener" aria-label="Instagram">
+        <span class="icon-instagram"></span>
+      </a>
+
     </nav>
-    <p class="m-footer-copyright jslicense">
-      <a href="{{asset "html/javascript.html"}}" rel="jslicense">{{t "JavaScript license information"}}</a>
+
+    <p class="m-footer-copyright">
+      <span>{{@site.title}} &copy; {{date format="YYYY"}}</span>
     </p>
+
   </div>
 </footer>
