Update theme colours

--- a/src/sass/common/_themes.scss
+++ b/src/sass/common/_themes.scss
@@ -3,10 +3,10 @@
   --background-color: #fff;
   --primary-foreground-color: #4a4a4a;
   --secondary-foreground-color: #000;
-  --primary-subtle-color: #0470ee;
+  --primary-subtle-color: #ec5f50;
   --secondary-subtle-color: #f4f8fd;
-  --titles-color: #333;
-  --link-color: #293951;
+  --titles-color: #ec5f50;
+  --link-color: #888;
   --primary-border-color: #9b9b9b;
   --secondary-border-color: aliceblue;
   --article-shadow-normal: 0 10px 10px rgba(0,0,0,0.08);
@@ -25,10 +25,10 @@
   --background-color: #111;
   --primary-foreground-color: #ccc;
   --secondary-foreground-color: #fff;
-  --primary-subtle-color: #2c2fe6;
+  --primary-subtle-color: #ff8d81;
   --secondary-subtle-color: #141920;
-  --titles-color: #b4b4b4;
-  --link-color: #b6b7f6;
+  --titles-color: #ff8d81;
+  --link-color: #888;
   --primary-border-color: #1d1d1d;
   --secondary-border-color: #0f0f0f;
   --article-shadow-normal: 0 4px 5px 5px rgba(0,0,0,0.1);
@@ -38,7 +38,7 @@
   --submenu-shadow-color-opacity: 0.55;
   --button-shadow-color-normal: rgba(10, 10, 10, 0.5);
   --button-shadow-color-hover: rgba(10, 10, 10, 0.5);
-  --toggle-darkmode-button-color: #efd114;
+  --toggle-darkmode-button-color: #ff8d81;
   --table-background-color-odd: #050505;
   --table-head-border-bottom: #1d1d1d;
 }
@@ -48,10 +48,10 @@
     --background-color: #111;
     --primary-foreground-color: #ccc;
     --secondary-foreground-color: #fff;
-    --primary-subtle-color: #2c2fe6;
+    --primary-subtle-color: #ff8d81;
     --secondary-subtle-color: #141920;
-    --titles-color: #b4b4b4;
-    --link-color: #b6b7f6;
+    --titles-color: #ff8d81;
+    --link-color: #888;
     --primary-border-color: #1d1d1d;
     --secondary-border-color: #0f0f0f;
     --article-shadow-normal: 0 4px 5px 5px rgba(0,0,0,0.1);
@@ -61,7 +61,7 @@
     --submenu-shadow-color-opacity: 0.55;
     --button-shadow-color-normal: rgba(10, 10, 10, 0.5);
     --button-shadow-color-hover: rgba(10, 10, 10, 0.5);
-    --toggle-darkmode-button-color: #efd114;
+    --toggle-darkmode-button-color: #ff8d81;
     --table-background-color-odd: #050505;
     --table-head-border-bottom: #1d1d1d;
   }
