--- a/src/sass/components/articles/_article-card.scss
+++ b/src/sass/components/articles/_article-card.scss
@@ -273,7 +273,7 @@
 .m-article-card__author-stats {
   display: flex;
   align-items: center;
-  color: var(--titles-color);
+  color: var(--primary-foreground-color);
   letter-spacing: 0.2px;
   font-size: 0.875rem;
 
