--- a/src/sass/common/_themes.scss
+++ b/src/sass/common/_themes.scss
@@ -9,13 +9,13 @@
   --link-color: #4a4a4a;
   --primary-border-color: #9b9b9b;
   --secondary-border-color: aliceblue;
-  --article-shadow-normal: 0 10px 10px rgba(0,0,0,0.08);
-  --article-shadow-hover: 0 4px 60px 0 rgba(0,0,0,0.2);
+  --article-shadow-normal: 0 10px 10px rgb(236, 95, 80, 0.08);
+  --article-shadow-hover: 0 4px 60px 0 rgba(236, 95, 80 ,0.2);
   --transparent-background-color: rgba(255,255,255,0.99);
   --footer-background-color: #ff8d81;
   --submenu-shadow-color-opacity: 0.25;
-  --button-shadow-color-normal: rgba(108, 108, 108, 0.2);
-  --button-shadow-color-hover: rgba(108, 108, 108, 0.3);
+  --button-shadow-color-normal: rgba(236, 95, 80, 0.2);
+  --button-shadow-color-hover: rgba(236, 95, 80, 0.3);
   --toggle-darkmode-button-color: #fff;
   --table-background-color-odd: #fafafa;
   --table-head-border-bottom: #e2e2e2;
