Update logo url

--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -8,7 +8,7 @@ This header template is shared across all the pages.
       <span class="icon-menu" aria-hidden="true"></span>
     </button>
     {{#if @site.logo}}
-      <a href="{{@site.url}}" class="m-logo in-mobile-topbar">
+      <a href="https://shotgun-hour.com/" class="m-logo in-mobile-topbar">
         <img src="{{@site.logo}}" alt="{{@site.title}}">
       </a>
     {{else}}
