Add link to logos

--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -12,7 +12,7 @@ This header template is shared across all the pages.
         <img src="{{@site.logo}}" alt="{{@site.title}}">
       </a>
     {{else}}
-      <a href="{{@site.url}}" class="m-site-name in-mobile-topbar">
+      <a href="https://shotgun-hour.com/" class="m-site-name in-mobile-topbar">
         {{@site.title}}
       </a>
     {{/if}}
@@ -32,13 +32,13 @@ This header template is shared across all the pages.
             <ul>
               {{#if @site.logo}}
                 <li class="only-desktop">
-                  <a href="{{@site.url}}" class="m-logo">
+                  <a href="https://shotgun-hour.com/" class="m-logo">
                     <img src="{{@site.logo}}" alt="{{@site.title}}">
                   </a>
                 </li>
                 {{else}}
                 <li class="only-desktop">
-                  <a href="{{@site.url}}" class="m-site-name in-desktop-menu">
+                  <a href="https://shotgun-hour.com/" class="m-site-name in-desktop-menu">
                     {{@site.title}}
                   </a>
                 </li>
