--- a/src/sass/layouts/_content.scss
+++ b/src/sass/layouts/_content.scss
@@ -4,4 +4,12 @@
   @include respond-to('medium') {
     padding: 60px 0 40px;
   }
+
+  &.no-cover {
+    padding: 80px 0 20px;
+
+    @include respond-to('medium') {
+      padding: 100px 0 40px;
+    }
+  }
 }
