--- a/index.hbs
+++ b/index.hbs
@@ -112,7 +112,7 @@ into the {body} of the default.hbs template --}}
       </div>
     </div>
     {{!-- Links to Previous/Next posts --}}
-    {{pagination}}
+    {{!-- {{pagination}} --}}
   </div>
 </main>
 
