--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -115,13 +115,15 @@ This header template is shared across all the pages.
             <button class="m-icon-button in-menu-main js-open-search" aria-label="{{t "Open search"}}">
               <span class="icon-search" aria-hidden="true"></span>
             </button>
-            <div class="m-toggle-darkmode js-tooltip" data-tippy-content="{{t "Toggle dark mode"}}" tabindex="0">
+
+            {{!-- <div class="m-toggle-darkmode js-tooltip" data-tippy-content="{{t "Toggle dark mode"}}" tabindex="0">
               <label for="toggle-darkmode" class="sr-only">
                 {{t "Toggle dark mode"}}
               </label>
               <input id="toggle-darkmode" type="checkbox" class="js-toggle-darkmode">
               <div></div>
-            </div>
+            </div> --}}
+
           </div>
         </div>
       </div>
