--- a/partials/hero.hbs
+++ b/partials/hero.hbs
@@ -25,7 +25,7 @@ for it, and apply those styles to the <header> tag.
   {{/contentFor}}
 
   <section class="m-hero with-picture" data-aos="fade">
-    <div class="m-hero__picture"></div>
+    <div class="m-hero__picture {{#is "tag"}}in-tag{{/is}}"></div>
 {{else}}
-  <section class="m-hero no-picture {{#is "post"}}in-post{{/is}}" data-aos="fade">
+  <section class="m-hero no-picture {{#is "tag"}}in-tag{{/is}}" data-aos="fade">
 {{/if}}
