--- a/tag.hbs
+++ b/tag.hbs
@@ -23,7 +23,7 @@ into the {body} of the default.hbs template --}}
   {{#tag}}
     {{!-- Inject styles of the hero image to make it responsive --}}
     {{> hero background=feature_image}}
-    <div class="m-hero__content" data-aos="fade-down">
+    <div class="m-hero__content hide" data-aos="fade-down">
       <h1 class="m-hero-title bigger">{{name}}</h1>
       {{#if description}}
         <p class="m-hero-description">
@@ -40,7 +40,7 @@ into the {body} of the default.hbs template --}}
     </div>
     </section>
   {{/tag}}
-  
+
   <div class="l-content">
     <div class="l-wrapper" data-aos="fade-up" data-aos-delay="300">
       <div class="l-grid centered">
