Update authors, tags : remove pagination

--- a/tag.hbs
+++ b/tag.hbs
@@ -49,6 +49,6 @@ into the {body} of the default.hbs template --}}
       </div>
     </div>
     {{!-- Links to Previous/Next posts --}}
-    {{pagination}}
+    {{!-- {{pagination}} --}}
   </div>
 </main>
