--- a/author.hbs
+++ b/author.hbs
@@ -72,7 +72,7 @@ into the {body} of the default.hbs template --}}
       </div>
     </section>
   {{/author}}
-  
+
   <div class="l-content">
     <div class="l-wrapper" data-aos="fade-up" data-aos-delay="300">
       <div class="l-grid centered">
@@ -81,6 +81,6 @@ into the {body} of the default.hbs template --}}
       </div>
     </div>
     {{!-- Links to Previous/Next posts --}}
-    {{pagination}}
+    {{!-- {{pagination}} --}}
   </div>
 </main>
